G1垃圾回收不同阶段过程